Initial CRDB Gateway Config